@@ -7,6 +7,10 @@ package org.eclipse.jdt.internal.core.search.indexing;
 import org.eclipse.core.resources.*;
 import org.eclipse.core.runtime.*;
 
+import org.eclipse.jdt.core.IClasspathEntry;
+import org.eclipse.jdt.core.IJavaProject;
+import org.eclipse.jdt.core.JavaCore;
+import org.eclipse.jdt.internal.core.JavaModelManager;
 import org.eclipse.jdt.internal.core.index.*;
 import org.eclipse.jdt.internal.core.search.processing.*;
 import org.eclipse.jdt.internal.core.index.impl.*;
@@ -14,9 +18,13 @@ import org.eclipse.jdt.internal.core.index.impl.*;
 import java.io.*;
 import java.util.*;
 
-public class IndexAllProject implements IJob {
+public class IndexAllProject implements IJob, IResourceVisitor {
 	IProject project;
 	IndexManager manager;
+	Hashtable indexedFileNames;
+	final String OK = "OK"; //$NON-NLS-1$
+	final String DELETED = "DELETED"; //$NON-NLS-1$
+	long indexLastModified;
 	public IndexAllProject(IProject project, IndexManager manager) {
 		this.project = project;
 		this.manager = manager;
@@ -58,41 +66,31 @@ public class IndexAllProject implements IJob {
 					monitor.enterRead(); // reacquire read permission
 				}
 			}
-			final String OK = "OK"; //$NON-NLS-1$
-			final String DELETED = "DELETED"; //$NON-NLS-1$
-			final long indexLastModified = index.getIndexFile().lastModified();
+			this.indexLastModified = index.getIndexFile().lastModified();
 
-			final Hashtable indexedFileNames = new Hashtable(100);
+			this.indexedFileNames = new Hashtable(100);
 			IQueryResult[] results = index.queryInDocumentNames(""); // all file names //$NON-NLS-1$
 			for (int i = 0, max = results == null ? 0 : results.length; i < max; i++) {
 				String fileName = results[i].getPath();
-				indexedFileNames.put(fileName, DELETED);
+				this.indexedFileNames.put(fileName, DELETED);
 			}
-			project.accept(new IResourceVisitor() {
-				public boolean visit(IResource resource) {
-					if (resource.getType() == IResource.FILE) {
-						String extension = resource.getFileExtension();
-						if ((extension != null) && extension.equalsIgnoreCase("java")) { //$NON-NLS-1$
-							IPath path = resource.getLocation();
-							if (path != null) {
-								File resourceFile = path.toFile();
-								String name = new IFileDocument((IFile) resource).getName();
-								if (indexedFileNames.get(name) == null) {
-									indexedFileNames.put(name, resource);
-								} else {
-									indexedFileNames.put(
-										name,
-										resourceFile.lastModified() > indexLastModified
-											? (Object) resource
-											: (Object) OK);
-								}
-							}
-						}
-						return false;
+			JavaCore javaCore = JavaCore.getJavaCore();
+			IJavaProject javaProject = javaCore.create(this.project);
+			IClasspathEntry[] entries = javaProject.getResolvedClasspath(true);
+			IWorkspaceRoot root = this.project.getWorkspace().getRoot();
+			for (int i = 0, length = entries.length; i < length; i++) {
+				IClasspathEntry entry = entries[i];
+				// Index only the project's source folders.
+				// Indexing of libraries is done in a separate job
+				if ((entry.getEntryKind() == IClasspathEntry.CPE_SOURCE)) {
+					IPath entryPath = entry.getPath();
+					IResource sourceFolder = root.findMember(entryPath);
+					if (sourceFolder != null) {
+						sourceFolder.accept(this);
 					}
-					return true;
 				}
-			});
+			}
+			
 			Enumeration names = indexedFileNames.keys();
 			while (names.hasMoreElements()) {
 				String name = (String) names.nextElement();
@@ -115,4 +113,28 @@ public class IndexAllProject implements IJob {
 	public String toString() {
 		return "indexing project " + project.getFullPath(); //$NON-NLS-1$
 	}
+	public boolean visit(IResource resource) {
+		if (resource.getType() == IResource.FILE) {
+			String extension = resource.getFileExtension();
+			if ((extension != null) && extension.equalsIgnoreCase("java")) { //$NON-NLS-1$
+				IPath path = resource.getLocation();
+				if (path != null) {
+					File resourceFile = path.toFile();
+					String name = new IFileDocument((IFile) resource).getName();
+					if (this.indexedFileNames.get(name) == null) {
+						this.indexedFileNames.put(name, resource);
+					} else {
+						this.indexedFileNames.put(
+							name,
+							resourceFile.lastModified() > this.indexLastModified
+								? (Object) resource
+								: (Object) OK);
+					}
+				}
+			}
+			return false;
+		}
+		return true;
+	}
+	
 }
